--- a/Indiego_Backend.csproj
+++ b/Indiego_Backend.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Settings\" />
+    <Folder Include="Storage\" />
   </ItemGroup>
 
 </Project>
