Models, Contracts, Repositories, Validators, Mappers

--- a/Indiego_Backend.csproj
+++ b/Indiego_Backend.csproj
@@ -24,6 +24,8 @@
 
   <ItemGroup>
     <Folder Include="Storage\" />
+    <Folder Include="Storage\Games\" />
+    <Folder Include="Storage\Images\" />
   </ItemGroup>
 
 </Project>
